--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,8 +4,9 @@
 name: Python package
 
 on:
-  push:
-    branches: [ 1641-musterloesung ]
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
